<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:id="@+id/home"
    android:title="Home"
    android:icon="@drawable/home_icon"/>
    <item
        android:id="@+id/search"
        android:title="Search"
        android:icon="@drawable/search_icon"/>
    <item
        android:id="@+id/cuisine"
        android:title="Cuisine"
        android:icon="@drawable/cuisine_icon"/>
    <item
        android:id="@+id/history"
        android:title="History"

    android:title="@string/home"
    android:icon="@drawable/home_icon"/>
    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/search_icon"/>
    <item
        android:id="@+id/cuisine"
        android:title="@string/cuisine"
        android:icon="@drawable/cuisine_icon"/>
    <item
        android:id="@+id/history"
        android:title="@string/history"
        android:icon="@drawable/history_icon"/>
</menu>