<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.meal.MealFragment">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/meal_image"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:scaleType="centerCrop"
        android:src="@drawable/meal_image"
        app:layout_constraintTop_toTopOf="parent"
        app:roundPercent="0.1" />

    <TextView
        android:id="@+id/meal_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:text="@string/meal_name"
        style="@style/TextAppearance.Material3.TitleLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_image"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/meal_name"
        app:singleSelection="true">

        <Button
            android:id="@+id/ingredient_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/ingredient"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/Procedure_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/procedure"
            app:cornerRadius="20dp" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/meal_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="15 min"
        android:layout_marginVertical="8dp"
        style="@style/TextAppearance.Material3.SearchView.Prefix"
        app:drawableStartCompat="@drawable/timer_icon"
        android:drawablePadding="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggleButton" />

    <TextView
        android:id="@+id/meal_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/_10_ingredients"
        android:layout_marginVertical="8dp"
        style="@style/TextAppearance.Material3.SearchView.Prefix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_count"
        android:layout_marginTop="8dp">
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>