<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_meal_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_medium_16"
        android:padding="@dimen/margin_small_8"
        app:cardBackgroundColor="#FAFDFB"
        app:cardCornerRadius="@dimen/margin_medium_12"
        app:layout_constraintHeight_percent=".2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/image_meal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/card_pic"
        android:foreground="@drawable/gradient"
        android:src="@drawable/foodimg"
        app:layout_constraintBottom_toBottomOf="@id/card_meal"
        app:layout_constraintEnd_toEndOf="@id/card_meal"
        app:layout_constraintHeight_percent=".2"
        app:layout_constraintTop_toTopOf="@id/card_meal"
        app:layout_constraintWidth_percent=".3"
        android:elevation="@dimen/_8sdp"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/margin_medium_16"
        android:layout_marginStart="@dimen/margin_medium_16"
        android:layout_marginEnd="@dimen/margin_small_8"
        android:orientation="vertical"
        android:padding="@dimen/margin_small_8"
        app:layout_constraintBottom_toBottomOf="@id/imageCardOfMeal"
        app:layout_constraintEnd_toStartOf="@id/imageCardOfMeal"
        app:layout_constraintHeight_percent=".2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_meal"
        app:layout_constraintWidth_percent=".6"
        android:elevation="@dimen/_8sdp">

        <TextView
            android:id="@+id/text_meal_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="top"
            android:text="@string/card_text"
            android:textColor="#191C1B"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvTimeToMakeMeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawablePadding="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/_20_mins"
            android:textColor="#3F4946"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/outline_timer_24" />

        <TextView
            android:id="@+id/tvLocationOfMeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/outline_outlined_flag_24"
            android:drawablePadding="8dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="bottom"
            android:text="@string/northern_india"
            android:textColor="#3F4946"
            android:textSize="12sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

