<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_12sdp"
    tools:context=".ui.home.HomeFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_170sdp"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:id="@+id/fastest_recipes_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:text="@string/fastest_recipes"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textColor="@color/md_theme_light_onBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_fast_recipes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/fastest_recipes_text"
        tools:itemCount="10"
        tools:listitem="@layout/item_recipes" />

    <TextView
        android:id="@+id/recipes_of_today_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipes_of_the_day"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textColor="@color/md_theme_light_onBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_fast_recipes" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_recipes_of_today"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/recipes_of_today_text"
        tools:itemCount="10"
        android:layout_marginTop="@dimen/_8sdp"
        tools:layout_editor_absoluteX="1dp"
        tools:listitem="@layout/item_recipes" />
    <TextView
        android:id="@+id/low_ingredient_recipes_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low_ingredient_recipes"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textColor="@color/md_theme_light_onBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_recipes_of_today" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_low_ingredients_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/low_ingredient_recipes_text"
            tools:itemCount="10"
            android:layout_marginTop="@dimen/_8sdp"
            tools:layout_editor_absoluteX="1dp"
            tools:listitem="@layout/item_recipes" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.core.widget.NestedScrollView>